<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalog Submission 4</string>
    <string name="release_on">Release On</string>
    <string name="score">score</string>
    <string name="poster_movie_catalogue">Poster Movie Catalogue</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Show</string>
    <string name="tab_text_3">Favorite</string>
    <string name="voters">Voters</string>
    <string name="detail">Detail</string>
    <string name="not_found">The Movie Favorite Not Found</string>
    <string name="tab_text_favorite_2">TV Show Favorite</string>
    <string name="tab_text_favorite_1">Movies Favorite</string>
    <string name="movie_name">Movie Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="vote_average">Vote Average</string>
</resources>
