<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/card_view"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="8dp"
android:layout_marginTop="4dp"
android:layout_marginRight="8dp"
android:layout_marginBottom="4dp"
card_view:cardCornerRadius="4dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        tools:src="@color/lightGrey" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/img_poster"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/movie_name" />

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_toEndOf="@id/img_poster"
        style="@style/TextContent.Subtitle"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_button"
        android:layout_below="@id/txt_year"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/img_poster"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/description" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@id/img_poster"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_set_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/share"
            android:textColor="@color/lightGrey"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>

</androidx.cardview.widget.CardView>
